--- a/app/views/templates/_header.html.slim
+++ b/app/views/templates/_header.html.slim
@@ -26,3 +26,6 @@
             = link_to 'ログイン', new_user_session_path, class: 'ui positive button'
             .or
             = link_to 'サインイン', new_user_registration_path, class: 'ui button'
+      .item
+        = link_to new_entry_path do
+          i.write.icon
