--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -42,4 +42,4 @@
         = f.check_box :is_draft, tabindex: 0, class: 'hidden'
         label 記事をまだ公開しませんか?
 
-    = f.submit '作成する', class: 'ui button'
+    = f.submit '作成する', class: 'ui primary button'
