--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -39,7 +39,7 @@
 
     .field
       .ui.checkbox
-        = f.check_box :is_draft, tabindex: 0, class: 'hidden'
+        = f.check_box :is_draft
         label 記事をまだ公開しませんか?
 
     = f.submit '作成する', class: 'ui primary button'
