--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -8,7 +8,7 @@
     = image_tag @entry.image.url(:large), class: 'ui fluid image'
 
 .ui.secondary.menu
-  .ui.text.container
+  .ui.container.segment
     a.item
       i.calendar.outline.icon
       = l @entry.created_at, format: :short
