--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -19,8 +19,8 @@
     .right.item
       .item
         span(style='margin-right:5px') Written By
-        = image_tag @entry.user.avatar_url(:thumb), class: 'ui avatar image'
-        span = @entry.user.name
+        = image_tag @user.avatar_url(:thumb), class: 'ui avatar image'
+        span = @user.name
 
 .ui.text.container.entry-body
   = @entry.body
@@ -31,9 +31,10 @@
 .ui.text.container
   .ui.threaded.comments
     h3.ui.dividing.header コメント一覧
-    .comments-container
-      - @entry.comments.each do |comment|
-        == render partial: 'comments/comment', locals: { comment: comment }
+    .comments-containerå
+      - cache(['comments', @comments.map(&:id), @comments.maximum(:updated_at)]) do
+        - @comments.each do |comment|
+          == render partial: 'comments/comment', locals: { comment: comment }
   == render partial: 'comments/form', locals: { entry: @entry }
 
 - if @entry.is_draft?
