--- a/app/views/templates/_head.html.slim
+++ b/app/views/templates/_head.html.slim
@@ -1,10 +1,10 @@
-= include_gon
+= include_gon(:init => true)
 = stylesheet_link_tag 'application', media: 'all'
 = javascript_include_tag 'application'
 
 = csrf_meta_tags
 / - if content_for(:page_title)
-/   - set_meta_tags site: 'BeeApp', title: yield(:page_title), reverse: true
+/   - set_meta_tags site: 'Techbo', title: yield(:page_title), reverse: true
 / - else
-/   - set_meta_tags site: 'BeeApp'
+/   - set_meta_tags site: 'Techbo'
 / = display_meta_tags(default_meta_tags)
