--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -31,7 +31,8 @@
 .ui.text.container
   .ui.threaded.comments
     h3.ui.dividing.header コメント一覧
-    .comments-containerå
+    .error-field
+    .comments-container
       - cache @entry.comments do
         - @entry.comments.each do |comment|
           == render partial: 'comments/comment', locals: { comment: comment }
