--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,7 @@
 .ui.middle.aligned.center.aligned.grid
   .column
+    .ui.info.message
+      | メールを送ることはございませんので、ご安心ください。
     h2.ui.teal.header
       .content Sign-in
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'ui large form'}) do |f|
