--- a/app/views/users/_entry.html.slim
+++ b/app/views/users/_entry.html.slim
@@ -7,7 +7,7 @@
       - else
         .ui.red.ribbon.label
           | 公開
-    = image_tag entry.image.to_s
+    = lazy_image_tag entry.image.to_s
     
   .content
     = link_to entry.title, entry_path(entry), class: 'header'
